--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
 	<head>
-		<link rel="stylesheet" href="styles.css" type="text/css">
+		<link rel="stylesheet" href="css/styles.css" type="text/css">
 		<title>Prototyp</title>
-		<script type="text/javascript" src="jquery.js"></script>
-		<script type="text/javascript" src="popup.js"></script>
-		<script type="text/javascript" src="popup_window.js"></script>
+		<script type="text/javascript" src="js/jquery.js"></script>
+		<script type="text/javascript" src="js/popup.js"></script>
+		<script type="text/javascript" src="js/popup_window.js"></script>
 	</head>
 	<body>
 		<div id="container">
