--- a/termin.html
+++ b/termin.html
@@ -1,4 +1,40 @@
 <html>
-	<head></head>
-	<body>trololololo</body>
+	<head>
+		<link rel="stylesheet" href="css/termin.css" type="text/css">
+		<title>Termin</title>
+	</head>
+	<body class="termin">
+		<form>	
+			<table>
+				<tr>
+					<td>Datum</td>
+					<td><input type="text"/></td>
+				</tr>
+				<tr>
+					<td>Uhrzeit</td>
+					<td><input type="text"/></td>
+				</tr>
+				<tr>
+					<td>Interessent</td>
+					<td><input type="text"/><input type="text"/></td>
+				</tr>
+				<tr>
+					<td>Quelle</td>
+					<td><input type="text"/></td>
+				</tr>
+				<tr>
+					<td>Ergebnis</td>
+					<td><select><option value="test" selected >test</option></select></td>
+				</tr>
+				<tr>
+					<td>Gesprächsdauer</td>
+					<td><input type="text"/></td>
+				</tr>
+				<tr>
+					<td>Bemerkung</td>
+					<td><textarea rows="6"></textarea></td>
+				</tr>
+			</table> 
+		</form>
+	</body>
 </html>
