--- a/mitarbeiter.html
+++ b/mitarbeiter.html
@@ -13,10 +13,10 @@
                 <div id="topnav">
                     <div id="leftnav">
                         <a href="index.php"><img src="css/calendar.png" />Kalender</a>
-                        <a href="liste.html" id="current"><img src="css/list.png" />Suche</a>
+                        <a href="liste.html"><img src="css/list.png" />Suche</a>
                         <a href="#"><img src="css/chart_bar.png" />Statistiken</a>
                         <a href="#"><img src="css/calendar_add.png" />Termin erstellen</a>
-                        <a href="mitarbeiter.html"><img src="css/group.png" />Mitarbeiter</a>
+                        <a href="mitarbeiter.html" id="current"><img src="css/group.png" />Mitarbeiter</a>
                     </div>
                     <div id="rightnav">
                         <a href="">Logout</a>
